force-app/main/default/objects/Product2/fields/Annual_Production_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Production_Volume__c</fullName>
    <label>Annual Production Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>