force-app/main/default/objects/Product2/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acrylic</fullName>
            </value>
            <value>
                <fullName>Alloy</fullName>
            </value>
            <value>
                <fullName>Brass</fullName>
            </value>
            <value>
                <fullName>PVC</fullName>
            </value>
            <value>
                <fullName>Fibre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>