force-app/main/default/objects/Product2/fields/Product_Brand__c.field-meta.xml
<CustomField>
    <fullName>Product_Brand__c</fullName>
    <label>Product Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highlander</fullName>
            </value>
            <value>
                <fullName>Better Intensity</fullName>
            </value>
            <value>
                <fullName>ProQuipped</fullName>
            </value>
            <value>
                <fullName>Live4Good</fullName>
            </value>
            <value>
                <fullName>StrikingGold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>