force-app/main/default/objects/Product2/fields/Units_in_Stock__c.field-meta.xml
<CustomField>
    <fullName>Units_in_Stock__c</fullName>
    <label>Units in Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>